--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "can-viewer"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 description = "view real-time CAN packages"
 
@@ -11,6 +11,7 @@ slint = { version = "1.7.1", default-features = false, features = ["backend-wini
 
 [target.'cfg(windows)'.dependencies]
 embedded-can = "0.3.0"
+winapi = { version = "0.3.9", features = ["winuser"] }
 pcan-basic = { git = "https://github.com/TuEmb/pcan-basic-rs.git", branch="master"}
 
 [target.'cfg(unix)'.dependencies]
@@ -19,6 +20,7 @@ socketcan = { git = "https://github.com/socketcan-rs/socketcan-rs.git", rev="e0d
 
 [build-dependencies]
 slint-build = "1.7.1"
+winresource = "0.1.17"
 
 [package.metadata.bundle]
 name = "can-viewer"
@@ -31,3 +33,7 @@ long_description = """
 can-viewer is developed by https://github.com/TuEmb, using Rust and Slint.
 can-view can records real-time can packages and parse data with DBC input.
 """
+
+[package.metadata.winresource]
+OriginalFilename = "can-viewer.exe"
+LegalCopyright = "Copyright © 2024"
