--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,8 @@ rfd = "0.14.1"
 slint = { version = "1.7.1", default-features = false, features = ["backend-winit", "compat-1-2", "renderer-winit-femtovg"] }
 
 [target.'cfg(windows)'.dependencies]
-embedded-can = "0.3.0"
 winapi = { version = "0.3.9", features = ["winuser"] }
-pcan-basic = { git = "https://github.com/TuEmb/pcan-basic-rs.git", branch="master"}
+pcan-basic = { git = "https://github.com/TuEmb/pcan-basic.git", branch="main"}
 
 [target.'cfg(unix)'.dependencies]
 dialoguer = "0.11.0"
