--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,13 @@ description = "view real-time CAN packages"
 can-dbc = { git="https://github.com/TuEmb/can-dbc.git", branch="dev" }
 rfd = "0.14.1"
 slint = { version = "1.7.1", default-features = false, features = ["backend-winit", "compat-1-2", "renderer-winit-femtovg"] }
+tokio = { version = "1.39.3", features = ["full"] }
 
 [target.'cfg(windows)'.dependencies]
-embedded-can = "0.3.0"
 winapi = { version = "0.3.9", features = ["winuser"] }
-pcan-basic = { git = "https://github.com/TuEmb/pcan-basic-rs.git", branch="master"}
+pcan-basic = { git = "https://github.com/TuEmb/pcan-basic.git", branch="main"}
 
 [target.'cfg(unix)'.dependencies]
-dialoguer = "0.11.0"
 socketcan = { git = "https://github.com/socketcan-rs/socketcan-rs.git", rev="e0d7760eca8085b247f37ea22f0aa41e00fa25fa", features = ["enumerate"] }
 
 [build-dependencies]
